Correct button for horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@
 .popup__form {
     display: flex;
     flex-direction: column;
-    max-width: 70vw;
+    min-width: 70vw;
     width: 100%;
     background-color: #fff;
     border-radius: 10px;
